--- a/templates/series_index.html.j2
+++ b/templates/series_index.html.j2
@@ -8,12 +8,12 @@
   {% include "includes/header_logo.html.j2" %}
   {% include "./includes/navbar.html.j2" %}
   <div class="main-container">
-    <div class="index-list">
+    <div class="post-list">
       {% for series in series_index %}
-      <div class="main_blog-post">
-        <a class="list-anchor" href="/series/{{series}}">
-          <div class="list-anchor__info">
-            <span class="info-title"> {{series}} </span>
+      <div class="post-container">
+        <a class="post-anchor" href="/series/{{series}}">
+          <div class="post-info">
+            <span class="post-info-title"> {{series}} </span>
           </div>
         </a>
       </div>
