--- a/templates/index.html.j2
+++ b/templates/index.html.j2
@@ -5,27 +5,27 @@
 {% block head %}{% endblock %}
 
 {% block content %}
-  {% include "includes/header_logo.html.j2" %}
-  {% include "./includes/navbar.html.j2" %}
-  <div class="main-container">
-    <div class="post-list">
-      {% for blog in blog_index %}
-      <div class="post-container">
-        <a class="post-anchor" href="/blog/{{blog.file_name}}">
-          <div class="post-info">
-            <span class="post-info-title"> {{ blog.title }} </span>
-            <span class="post-info-date"> {{ blog.date }} </span>
-          </div>
-        </a>
-        <div class="post-tags">
-          {% for tag in blog.tags %}
-          <a class="post-tags-anchor" href="/category/{{tag}}">
-            <span class="post-tags-span">{{ tag }}</span>
-          </a>
-          {% endfor %}
+{% include "includes/header_logo.html.j2" %}
+{% include "./includes/navbar.html.j2" %}
+<div class="main-container">
+  <div class="post-list">
+    {% for blog in blog_index %}
+    <div class="post-container">
+      <a class="post-dynamic-{{blog.series}} post-anchor" href="/blog/{{blog.file_name}}">
+        <div class="post-info">
+          <span class="post-info-title"> {{ blog.title }} </span>
+          <span class="post-info-date"> {{ blog.date }} </span>
         </div>
+      </a>
+      <div class="post-tags">
+        {% for tag in blog.tags %}
+        <a class="post-tags-anchor" href="/category/{{tag}}">
+          <span class="post-tags-span">{{ tag }}</span>
+        </a>
+        {% endfor %}
       </div>
-      {% endfor %}
     </div>
+    {% endfor %}
   </div>
+</div>
 {% endblock %}
