--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -214,6 +214,11 @@ body {
   justify-content: center;
 }
 
+/* Dynamic post colors based on special series */
+.post-dynamic-games {
+  background: #61aeee;
+}
+
 :where(.post-anchor, .post-anchor-alt):hover {
   transition: 0.4s ease;
   background: var(--post-anchor-hover-background);
