--- a/templates/series_index.html.j2
+++ b/templates/series_index.html.j2
@@ -11,7 +11,7 @@
   <div class="post-list">
     {% for series in series_index %}
     <div class="post-container">
-      <a class="post-anchor-alt" href="/series/{{series}}">
+      <a class="post-dynamic-{{series}} post-anchor-alt" href="/series/{{series}}">
         <div class="post-info">
           <span class="post-info-title"> {{series}} </span>
         </div>
